Update 12_Debugging-and-Advanced-Topics/advanced-gdb-debug.md